# smcjax

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: settings.json
.claude/agents/: test-writer.md
.claude/hooks/: pre-push-check.sh
.claude/rules/: code-style.md  design-principles.md  error-handling.md  python-idioms.md
.claude/skills/branch/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/pr/: SKILL.md
.github/: CODEOWNERS
.github/actions/setup-uv/: action.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml  release.yml  test-publish.yml
api/SUMMARY/: index.html
api/smcjax/: index.html
api/smcjax/_utils/: index.html
api/smcjax/auxiliary/: index.html
api/smcjax/bootstrap/: index.html
api/smcjax/containers/: index.html
api/smcjax/diagnostics/: index.html
api/smcjax/liu_west/: index.html
api/smcjax/simulate/: index.html
api/smcjax/types/: index.html
api/smcjax/weights/: index.html
docs/: api.md  index.md  publishing.md
recipe/: meta.yaml
scripts/: setup-repo.sh
search/: search_index.json
smcjax/: __init__.py  __main__.py  auxiliary.py  bootstrap.py  containers.py  diagnostics.py  ess.py  liu_west.py  main.py  resampling.py  simulate.py  types.py  weights.py
tests/: conftest.py  test_auxiliary.py  test_bootstrap.py  test_diagnostics.py  test_ess.py  test_init.py  test_jit_vmap.py  test_liu_west.py  test_main.py  test_main_module.py  test_resampling.py  test_simulate.py  test_weights.py
